@@ -2,5 +2,8 @@ module Spec
   module DSL
     class ExamplePendingError < StandardError
     end
+
+    class PendingFixedError < StandardError
+    end
   end
 end
