@@ -114,6 +114,12 @@ dd.spec.not_implemented {
   background: #FCFB98; color: #131313;
 }
 
+dd.spec.pending_fixed {
+  border-left: 5px solid #0000C2;
+  border-bottom: 1px solid #0000C2;
+  color: #0000C2; background: #D3FBFF;
+}
+
 .backtrace {
   color: #000;
   font-size: 12px;
@@ -224,7 +230,20 @@ a {
       </div>
     </dd>
     <script type="text/javascript">moveProgressBar('29.4');</script>
-    <dd class="spec not_implemented"><span class="not_implemented_spec_name">should make eggs and bacon</span></dd>
+    <dd class="spec pending_fixed">
+      <span class="failed_spec_name">has a bug we need to fix</span>
+      <div class="failure" id="failure_4">
+        <div class="message"><pre>Expecting pending 'here is the bug' to fail. No Error was raised.</pre></div>
+        <div class="backtrace"><pre>./failing_examples/mocking_example.rb:33:
+./spec/spec/runner/formatter/html_formatter_spec.rb:17:
+./spec/spec/runner/formatter/html_formatter_spec.rb:13:</pre></div>
+    <pre class="ruby"><code><span class="linenum">31</span>
+<span class="linenum">32</span>  <span class="ident">it</span> <span class="punct">&quot;</span><span class="string">has a bug we need to fix</span><span class="punct">&quot;</span> <span class="keyword">do</span>
+<span class="offending"><span class="linenum">33</span>    <span class="ident">pending</span> <span class="punct">&quot;</span><span class="string">here is the bug</span><span class="punct">&quot;</span> <span class="keyword">do</span></span>
+<span class="linenum">34</span>      <span class="comment"># Actually, no. It's fixed. This will fail because it passes :-)</span>
+<span class="linenum">35</span>      <span class="ident">mock</span> <span class="punct">=</span> <span class="ident">mock</span><span class="punct">(&quot;</span><span class="string">Bug</span><span class="punct">&quot;)</span></code></pre>
+      </div>
+    </dd>
   </dl>
 </div>
 <div class="behaviour">
@@ -234,7 +253,7 @@ a {
     <script type="text/javascript">moveProgressBar('35.2');</script>
     <dd class="spec failed">
       <span class="failed_spec_name">should print diff of different strings</span>
-      <div class="failure" id="failure_4">
+      <div class="failure" id="failure_5">
         <div class="message"><pre>expected &quot;RSpec is a\nbehaviour driven development\nframework for Ruby\n&quot;, got &quot;RSpec is a\nbehavior driven development\nframework for Ruby\n&quot; (using ==)
 Diff:
 @@ -1,4 +1,4 @@
@@ -255,7 +274,7 @@ Diff:
     <script type="text/javascript">moveProgressBar('41.1');</script>
     <dd class="spec failed">
       <span class="failed_spec_name">should print diff of different objects' pretty representation</span>
-      <div class="failure" id="failure_5">
+      <div class="failure" id="failure_6">
         <div class="message"><pre>expected &lt;Animal
 name=bob,
 species=tortoise
@@ -339,7 +358,7 @@ Diff:
   </dl>
 </div>
 <script type="text/javascript">document.getElementById('duration').innerHTML = "Finished in <strong>x seconds</strong>";</script>
-<script type="text/javascript">document.getElementById('totals').innerHTML = "17 examples, 5 failures, 4 pending";</script>
+<script type="text/javascript">document.getElementById('totals').innerHTML = "17 examples, 6 failures, 3 pending";</script>
 </div>
 </div>
 </body>
